--- a/saliyah.aulder/style.css
+++ b/saliyah.aulder/style.css
@@ -1,8 +1,8 @@
 td {
     padding:0 15px 0 15px;
-    color: darkblue;
+    color: black;
 }
 
 #about-me {
-    color: #A8A6A5;  
+    color: #0037fc;  
 }
